[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Mixed/Backgrounds/SchoolBackground1920x1080_v1.png" type="Texture" id=1]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Levels/StoryLevel/EndingLevel.tres" type="Resource" id=3]
[ext_resource path="res://Resources/Levels/SaveDeckLevel/SaveDeckLevel.tres" type="Resource" id=4]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level02/Level02List.tres" type="Resource" id=5]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level01/Level01List.tres" type="Resource" id=6]
[ext_resource path="res://Scenes/CampaignInterface/DeadPanel/DeadPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Managers/Levels/LevelManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Levels/StoryLevel/IntroLevel.tres" type="Resource" id=9]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level10/Level10List.tres" type="Resource" id=10]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level04/Level04List.tres" type="Resource" id=11]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level14/Level14List.tres" type="Resource" id=12]
[ext_resource path="res://Resources/Levels/ShelterLevel/ShelterLevel.tres" type="Resource" id=13]
[ext_resource path="res://Scenes/CampaignInterface/GameMenu/CampaignGameMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level13/Level13List.tres" type="Resource" id=15]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level08/Level08List.tres" type="Resource" id=17]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level11/Level11List.tres" type="Resource" id=18]
[ext_resource path="res://Themes/StyleBoxes/ShadowStyleBox.tres" type="StyleBox" id=19]
[ext_resource path="res://Scenes/CampaignInterface/CampaignInterface.gd" type="Script" id=20]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level07/Level07List.tres" type="Resource" id=21]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level16/Level16List.tres" type="Resource" id=22]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level17/Level17List.tres" type="Resource" id=23]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level05/Level05List.tres" type="Resource" id=24]
[ext_resource path="res://Resources/Levels/StoryLevel/CongratsLevel.tres" type="Resource" id=25]
[ext_resource path="res://Managers/Tooltip/TooltipManager.tscn" type="PackedScene" id=26]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level28/Level28List.tres" type="Resource" id=50]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level25/Level25List.tres" type="Resource" id=51]
[ext_resource path="res://Resources/Weighted/WeightedLevelList/Level22/Level22List.tres" type="Resource" id=52]
[ext_resource path="res://Resources/Levels/StoryLevel/PreBossLevel.tres" type="Resource" id=53]
[ext_resource path="res://Managers/Mood/MoodManager.tscn" type="PackedScene" id=54]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/RPG-Battle-Climax.ogg" type="AudioStream" id=55]
[ext_resource path="res://Assets/Sourced/Music/OfFarDifferentNature/Of Far Different Nature - Ganxta (CC-BY).ogg" type="AudioStream" id=56]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/Comrades-Always.ogg" type="AudioStream" id=57]
[ext_resource path="res://Assets/Sourced/Music/OfFarDifferentNature/Of Far Different Nature - Adventure Begins (CC-BY).ogg" type="AudioStream" id=58]
[ext_resource path="res://Assets/Sourced/Music/SoundImage/Into-Battle_v001.ogg" type="AudioStream" id=59]
[ext_resource path="res://Resources/Levels/CreditsLevel/CreditsLevel.tres" type="Resource" id=60]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.533333, 0.364706, 0.513726, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CampaignInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInterfaceContainer" type="Control" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShadowPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadPanel" parent="." instance=ExtResource( 7 )]
visible = false
mouse_filter = 2

[node name="CampaignInterfaceContainer" type="Control" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckViewContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipManager" parent="." instance=ExtResource( 26 )]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LevelManager" parent="." instance=ExtResource( 8 )]
levels = [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 24 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 22 ), ExtResource( 53 ), ExtResource( 13 ), ExtResource( 23 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 60 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 52 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 51 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 50 ), ExtResource( 25 ), ExtResource( 13 ) ]

[node name="TestLevelManager" parent="." instance=ExtResource( 8 )]
levels = [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 4 ) ]

[node name="MoodManager" parent="." instance=ExtResource( 54 )]
intro_song = ExtResource( 58 )
easy_battle_song = ExtResource( 55 )
hard_battle_song = ExtResource( 59 )
shelter_song = ExtResource( 57 )
victory_song = ExtResource( 56 )

[node name="LevelDelayTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CampaignGameMenu" parent="." instance=ExtResource( 14 )]
visible = false
[connection signal="exit_pressed" from="DeadPanel" to="." method="_on_DeadPanel_exit_pressed"]
[connection signal="forfeit_pressed" from="DeadPanel" to="." method="_on_DeadPanel_forfeit_pressed"]
[connection signal="retry_pressed" from="DeadPanel" to="." method="_on_DeadPanel_retry_pressed"]
[connection signal="restart_button_pressed" from="CampaignGameMenu" to="." method="_on_CampaignGameMenu_restart_button_pressed"]
[connection signal="return_button_pressed" from="CampaignGameMenu" to="." method="_on_CampaignGameMenu_return_button_pressed"]
[connection signal="save_and_exit_button_pressed" from="CampaignGameMenu" to="." method="_on_CampaignGameMenu_save_and_exit_button_pressed"]
